--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
 		<div class="container-fluid ">
 			<div class="container">
-				<a href="index.html" class="navbar-brand font-big-shoulder font-30 text-dark">
+				<a href="index.html" class="navbar-brand font-big-shoulder font-30">
 				Khant<span class="text-fav">Phone</span>
 			</a>
 			<button class="navbar-toggler text-dark" data-toggle="collapse" data-target="#navbar">
@@ -31,19 +31,19 @@
 			<div class="collapse navbar-collapse font-18" id="navbar">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a href="#intro" class="nav-link nav-text font-bu">Introduction</a>
+						<a href="#intro" class="nav-link font-bu">Introduction</a>
 					</li>					
 					<li class="nav-item">
-						<a href="#completed-prj" class="nav-link nav-text font-bu">CompletedProjects</a>
+						<a href="#completed-prj" class="nav-link  font-bu">CompletedProjects</a>
 					</li>
 					<li class="nav-item">
-						<a href="#myskills" class="nav-link nav-text font-bu">MySkills</a>
+						<a href="#myskills" class="nav-link  font-bu">MySkills</a>
 					</li>
 					<li class="nav-item">
-						<a href="#services" class="nav-link nav-text font-bu">Services</a>
+						<a href="#services" class="nav-link  font-bu">Services</a>
 					</li>
 					<li class="nav-item">
-						<a href="#contanct" class="nav-link nav-text font-bu">Contact</a>
+						<a href="#contanct" class="nav-link  font-bu">Contact</a>
 					</li>
 
 				</ul>
@@ -57,18 +57,12 @@
 		      </button>
 		  </div>
 	</nav>	
-	<!-- navigation end -->	
-	<!-- toogle checkbox start -->
-	<section id="toggle-checkbox">
-		<p class="font-15 font-bar text-dark font-weight-bold">Dark Mode</p>
-		<input type="checkbox" id="switch" name="theme" /><label for="switch">Toggle</label>
-	</section>
-	<!-- toogle checkbox end -->
+	<!-- navigation end -->		
 	<!-- indrouction section start -->
 	<section id="info" data-aos = "fade-in">
 		<div class="author-info" >
 			<img src="images/profile1.jpeg" alt="" class="d-block mx-auto">
-			 <p class="font-sar font-20 font-weight-bold mt-4  ml-4 text-dark text-center " style="letter-spacing: 2px;">  Hi , I am <span class="typed1 text-fav"></span>
+			 <p class="font-sar font-20 font-weight-bold mt-4  ml-4  text-center " style="letter-spacing: 2px;">  Hi , I am <span class="typed1 text-fav"></span>
 			</p>
 		</div>		
 	</section>
@@ -85,12 +79,12 @@
 				</div>
 				<div class="col-md-6 d-flex" data-aos = "fade-up">
 					<div class="about-me">
-						<h2 class="font-sar text-dark">About Me</h2>
-						<p class="font-bar font-18 mt-4 muted-text">Hey! I am Khant Phone who is learnig web development and enjoy about coding.</p>
-						<p class="font-bar font-18 mt-3 muted-text">I learned web development since 2019 . I am learning LARAVEL at the moment.</p> 
-						<p class="font-bar font-18 mt-3 muted-text">Currently learning Programming & Japanese Courses at <a href="http://metro-myanmar.com/mic/" >
+						<h2 class="font-sar">About Me</h2>
+						<p class="font-bar font-18 mt-4">Hey! I am Khant Phone who is learnig web development and enjoy about coding.</p>
+						<p class="font-bar font-18 mt-3">I learned web development since 2019 . I am learning LARAVEL at the moment.</p> 
+						<p class="font-bar font-18 mt-3">Currently learning Programming & Japanese Courses at <a href="http://metro-myanmar.com/mic/" >
 						Metro IT & Japanese Language Center .</a></p>
-						<p class="font-bar font-18 mt-3 muted-text">Completed courses from <a href="https://aprogrammer.blog/">AProgrammer.blog  . </a></p>
+						<p class="font-bar font-18 mt-3">Completed courses from <a href="https://aprogrammer.blog/">AProgrammer.blog  . </a></p>
 						<div class="reach-to-me mt-5" data-aos = "fade-up">
 							<a href="https://www.facebook.com/khant.phonekh">
 								<button class="btn px-5 py-2 font-bu text-white bg-fav" >Reach Me</button>
@@ -112,8 +106,8 @@
 				  			<img src="images/customer-review.png" alt="" width="70">
 				  		</div>
 				  		<div class="col mt-2">
-				  			<span class="counter font-sar font-24 font-weight-bold text-dark">100</span>
-				  			<span class=" font-sar font-24 font-weight-bold text-dark">+</span>
+				  			<span class="counter font-sar font-24 font-weight-bold ">100</span>
+				  			<span class=" font-sar font-24 font-weight-bold ">+</span>
 				  			<p class="font-bar font-20 font-weight-bold text-fav">Reviews</p>
 				  		</div>
 				  	</div>
@@ -124,8 +118,8 @@
 				  			<img src="images/project-management.png" alt="" width="70">
 				  		</div>
 				  		<div class="col mt-2">
-				  			 <span class="counter font-sar font-24 font-weight-bold text-dark">50</span>
-				  			 <span class=" font-sar font-24 font-weight-bold text-dark">+</span>
+				  			 <span class="counter font-sar font-24 font-weight-bold ">50</span>
+				  			 <span class=" font-sar font-24 font-weight-bold ">+</span>
 				  			<p class="font-bar font-20 font-weight-bold text-fav">Projects</p>
 				  		</div>
 				  	</div>
@@ -136,8 +130,8 @@
 				  			<img src="images/settings.png" alt="" width="70">
 				  		</div>
 				  		<div class="col mt-2">
-				  			<span class="counter font-sar font-24 font-weight-bold text-dark">15</span>
-				  			<span class=" font-sar font-24 font-weight-bold text-dark">+</span>
+				  			<span class="counter font-sar font-24 font-weight-bold ">15</span>
+				  			<span class=" font-sar font-24 font-weight-bold ">+</span>
 				  			<p class="font-bar font-20 font-weight-bold text-fav">Webiste</p>
 				  		</div>
 				  	</div>
@@ -148,8 +142,8 @@
 				  			<img src="images/handshake.png" alt="" width="70">
 				  		</div>
 				  		<div class="col mt-2">
-				  			<span class="counter font-sar font-24 font-weight-bold text-dark">10</span>
-				  			<span class=" font-sar font-24 font-weight-bold text-dark">+</span>
+				  			<span class="counter font-sar font-24 font-weight-bold ">10</span>
+				  			<span class=" font-sar font-24 font-weight-bold ">+</span>
 				  			<p class="font-bar font-20 font-weight-bold text-fav">Clients</p>
 				  		</div>
 				  	</div>
@@ -161,7 +155,7 @@
 	<!-- completedProject section start -->
 	<section id="completed-prj" class="py-4 px-4 mt-4 bg-light">
 	 	<div class="container">
-			<h2 class="font-sar text-center py-2 text-dark">Completed <span class="text-fav">
+			<h2 class="font-sar text-center py-2">Completed <span class="text-fav">
 				Projects
 			</span></h2>			
 			<div id="custom-border-1">
@@ -185,7 +179,7 @@
 					 <a href="https://khantphone.github.io/SampleLandingPage/">
 					 	<img src="images/SampleLandingPage.png" alt="AdminDashboard" class="img-fluid">
 					 </a>					 
-					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 text-dark">SampleLandingPage 
+					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18">SampleLandingPage 
 					 	<span class="text-muted font-16">( Front-End ) </span> </h3>				  
 						<div class="live-preview mt-4">
 							<a href="https://khantphone.github.io/SampleLandingPage/">
@@ -200,7 +194,7 @@
 					<a href="https://khantphone.github.io/Personal_Portfolio/">
 						<img src="images/Portfolio.png" alt="portofolio" class="img-fluid">
 					</a>					 
-					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 text-dark">PersonalPortofolio 
+					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18">PersonalPortofolio 
 					 	<span class="text-muted font-16">( Front-End ) </span></h3>					  
 						<div class="live-preview mt-4">	
 							<a href="https://khantphone.github.io/Personal_Portfolio/">					
@@ -213,7 +207,7 @@
 					<a href="https://khantphone.github.io/CheckOutForm/">
 						<img src="images/Bs-checkOut.png" alt="Bs-checkOut" class="img-fluid">
 					</a>					 
-					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 text-dark">
+					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18">
 					 	CheckOutForm 
 					 	<span class="text-muted font-16">( Front-End ) </span></h3>				  
 						<div class="live-preview mt-4">	
@@ -230,7 +224,7 @@
 					 <a href="https://khantphone.github.io/Ecommerce/.">
 					 	<img src="images/Ecommerce.png" alt="AdminDashboard" class="img-fluid">
 					 </a>					 
-					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu text-dark">Ecommerce
+					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">Ecommerce
 					 	<span class="text-muted font-16">( Front-End ) </span> </h3>				  
 						<div class="live-preview mt-4">
 							<a href="https://khantphone.github.io/Ecommerce/.">
@@ -249,7 +243,7 @@
 	<!-- myskills section start -->
 	<section id="myskills" class="py-4 px-4 mt-4 bg-light">
 		<div class="container" >
-			<h2 class="font-sar text-center py-2 text-dark">My <span class="text-fav">
+			<h2 class="font-sar text-center py-k">My <span class="text-fav">
 				Skills
 			</span></h2>			
 			<div id="custom-border-1">
@@ -258,32 +252,32 @@
 			<div class="row py-5">
 				<div class="col-md-6 mt-2" data-aos ="fade-up">
 					<div class="d-flex mt-3">						
-						<p class="font-16 font-bu text-dark">HTML</p>						
+						<p class="font-16 font-bu">HTML</p>						
 					</div>
 					<div class="progress" style="height: 15px;">						
 						<div class="progress-bar " style="width:70%; background:#9EFAFF;"></div>
 					</div>
 					<div class="d-flex mt-3">						
-						<p class="font-16 font-bu text-dark">Css</p>						
+						<p class="font-16 font-bu">Css</p>						
 					</div>
 					<div class="progress" style="height: 15px;">						
 						<div class="progress-bar " style="width:60%; background: #FF9EE0;"></div>
 					</div>
 					<div class="d-flex mt-3">						
-						<p class="font-16 font-bu text-dark">Js</p>						
+						<p class="font-16 font-bu">Js</p>						
 					</div>
 					<div class="progress" style="height: 15px;">						
 						<div class="progress-bar " style="width:25%; background: #EB9EFF;"></div>
 					</div>
 					<div class="d-flex mt-3">						
-						<p class="font-16 font-bu text-dark">PHP</p>						
+						<p class="font-16 font-bu">PHP</p>						
 					</div>
 					<div class="progress" style="height: 15px;">						
 						<div class="progress-bar " style="width:50%; background: #FFFA9E;"></div>
 					</div>
 				</div>
 				<div class="col-md-6 mt-4" data-aos = "fade-up">
-					<p class="font-18 font-bar mt-5 muted-text">
+					<p class="font-18 font-bar mt-5">
 					One years experiences in Web Development ( HTML ,Css ,BootStrap , Js , PHP , MySql & GIT )  
 					 and want to learn new things .
 					Experienced in some IDE ( Atom , Sublime Text 3, Eclipse , Visual Studio Code ) .
@@ -309,8 +303,8 @@
 					<div class="card card-1 py-5 px-5 bg-card">
 						<img src="images/web.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body ">
-							<h3 class="font-sar font-20 text-center text-dark">Web Development</h3>
-							<p class="font-bar font-16  mt-3 text-center muted-text">
+							<h3 class="font-sar font-20 text-center ">Web Development</h3>
+							<p class="font-bar font-16  mt-3 text-center ">
 							Willing to give you advices about your Website .</p>
 						</div>
 					</div>				
@@ -319,8 +313,8 @@
 					<div class="card py-5 px-5 card-2 bg-card">
 						<img src="images/user-interface.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body ">
-							<h3 class="font-sar font-20 text-center text-dark">Mobile Freindly</h3>
-							<p class="font-bar font-16 text-center mt-3 muted-text">
+							<h3 class="font-sar font-20 text-center ">Mobile Freindly</h3>
+							<p class="font-bar font-16 text-center mt-3 ">
 							Build your own Website reponsive to any device .</p>
 						</div>
 					</div>					
@@ -329,8 +323,8 @@
 					<div class="card py-5 px-5 card-3 bg-card">
 						<img src="images/edit-video.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body ">
-							<h3 class="font-sar font-20 text-center text-dark">Video Editing</h3>
-							<p class="font-bar font-16 text-center mt-3 muted-text">
+							<h3 class="font-sar font-20 text-center ">Video Editing</h3>
+							<p class="font-bar font-16 text-center mt-3 ">
 							Editing video if neccessary about your Website .</p>
 						</div>
 					</div>					
@@ -339,8 +333,8 @@
 					<div class="card py-5 px-5 card-4 bg-card">
 						<img src="images/conversation.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body">
-							<h3 class="font-sar font-20 text-center  text-dark">Communication</h3>
-							<p class="font-bar font-16 text-center mt-3 muted-text">
+							<h3 class="font-sar font-20 text-center ">Communication</h3>
+							<p class="font-bar font-16 text-center mt-3">
 								Making Website Design & Patterns as You prefer ! 
 							</p>
 						</div>
@@ -350,8 +344,8 @@
 					<div class="card py-5 px-5 card-5 bg-card">
 						<img src="images/settings.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body ">
-							<h3 class="font-sar font-20 text-center text-dark">Web Design</h3>
-							<p class="font-bar font-16 text-center mt-3 muted-text">
+							<h3 class="font-sar font-20 text-center ">Web Design</h3>
+							<p class="font-bar font-16 text-center mt-3 ">
 							Give you advices how Your Website Design should be .</p>
 						</div>
 					</div>					
@@ -360,8 +354,8 @@
 					<div class="card py-5 px-5 card-6 bg-card">
 						<img src="images/bug.png" alt="" width="80" class="img-fluid d-block mx-auto">
 						<div class="card-body "> 
-							<h3 class="font-sar font-20 text-center text-dark">Finding Bugs</h3>
-							<p class="font-bar font-16 text-center mt-3 muted-text">
+							<h3 class="font-sar font-20 text-center ">Finding Bugs</h3>
+							<p class="font-bar font-16 text-center mt-3 ">
 							Always taking reponsibility about your Webiste Bugs .</p>
 						</div>
 					</div>					
@@ -373,7 +367,7 @@
 	<!-- Swiper section start -->
 	<section id="swiper" class="py-4 px-4 mt-4 bg-light" data-aos = "fade-up">
 		<div class="container">
-			<h2 class="font-sar text-center py-2 text-dark">Teachers <span class="text-fav">
+			<h2 class="font-sar text-center py-2 ">Teachers <span class="text-fav">
 				Reviews
 			</span></h2>			
 			<div id="custom-border-1">
@@ -387,10 +381,10 @@
 				      			<img src="images/teacherReview1.jpeg" alt="" class="img-fluid d-block mx-auto" >
 				      		</div>
 				      		<div class="col-md-6 ">
-				      			<h2 class="font-sar font-18 text-dark">
+				      			<h2 class="font-sar font-18 ">
 				      				T.MyatPhyoPhyo ( English )
 				      			</h2>
-				      			<p class="font-bar font-16 muted-text">
+				      			<p class="font-bar font-16 ">
 				      				Khant Phone was a student who is committed on whatever he decided to do. He has a good personality and always does the best job with few mistakes. There is no doubt that he will develop and produce effective outcomes with great efforts because of his enthusiasm and committment on his job.
 				      			</p>
 				      			<p>
@@ -408,10 +402,10 @@
 				      			<img src="images/teacherReview2.jpeg" alt="" class="img-fluid d-block mx-auto ">
 				      		</div>
 				      		<div class="col-md-6" data-aos = "fade-up">
-				      			<h2 class="font-sar font-18 text-dark">
+				      			<h2 class="font-sar font-18">
 				      				T.HlaingTinHtun ( IT )
 				      			</h2>
-				      			<p class="font-bar font-16 muted-text">				      				
+				      			<p class="font-bar font-16 ">				      				
 				      				 Khant did a great job and submitted the assignments well through out the <a href="https://aprogrammer.blog/extphp">
 				      				 Extensive PHP course
 				      				 </a>. 
@@ -430,10 +424,10 @@
 				      			<img src="images/teacherReview3.jpeg" alt="" class="img-fluid d-block mx-auto">
 				      		</div>
 				      		<div class="col-md-6 ">
-				      			<h2 class="font-sar font-18  text-dark">
+				      			<h2 class="font-sar font-18  ">
 				      				T.KhinWaiWaiKyaw ( IT )
 				      			</h2>
-				      			<p class="font-bar font-16 muted-text">
+				      			<p class="font-bar font-16 ">
 				      				It is my great pleasure to recommend Khant Phone for the role of Web developer.
 									While studying in <a href="http://metro-myanmar.com/mic/">
 									Metro IT & Japanese Language Center </a>
@@ -454,10 +448,10 @@
 				      			<img src="images/teacherReview4.jpeg" alt="" class="img-fluid d-block mx-auto">
 				      		</div>
 				      		<div class="col-md-6 ">
-				      			<h2 class="font-sar font-18  text-dark">
+				      			<h2 class="font-sar font-18  ">
 				      				T.ChainTheeMoh ( Japanese )
 				      			</h2>
-				      			<p class="font-bar font-16 muted-text">
+				      			<p class="font-bar font-16 ">
 				      				Since Nov 2019, he has been studying Japanese together with IT.  Now he has finished Japanese level N3 and is starting to study N2.  He is pure and quiet.  However, he did his best to give a Japanese speech in the class.  He is a good boy.
 				      			</p>
 				      			<p>
@@ -479,7 +473,7 @@
 	<!-- contanct section start -->
 	<section id="contanct" class="py-4 mt-4 px-4">
 		<div class="container" data-aos = "fade-out">
-			<h2 class="font-sar text-center py-2 text-dark">Get<span class="text-fav">In</span>Touch</h2>	
+			<h2 class="font-sar text-center py-2">Get<span class="text-fav">In</span>Touch</h2>	
 			<div id="custom-border-1">
 				<div id="cutom-border-2"></div>
 			</div>			
@@ -494,10 +488,10 @@
 	<section id="footer" class="py-2 mt-4 px-4 bg-light">
 		<div class="row">
 			<div class="col-md-12 mt-4">
-				<p class="font-bar font-16 text-center muted-text">
+				<p class="font-bar font-16 text-center ">
 				2021 &copy;Copyright.All rights reserved.				
 				</p>
-				<p class="font-big-shoulder font-16 text-center muted-text">
+				<p class="font-big-shoulder font-16 text-center ">
 				<i class="fa fa-heartbeat mr-1" aria-hidden="true"></i><span class="font-bar">By </span>Khant <span class="text-fav">Phone</span>				
 				</p>
 			</div>						
