--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					 	<span class="text-muted font-16">( Front-End ) </span></h3>					  
 						<div class="live-preview mt-4">	
 							<a href="https://khantphone.github.io/AdminDashboard/">						
-								<button class="btn d-block mx-auto bg-fav px-4 py-2 text-white font-bu"><i class="fas fa-eye mr-2"></i> Live Preview
+								<button class="btn d-block mx-auto px-4 py-2 text-white font-bu font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
 								</button>	
 							</a>				
 						 </div>
@@ -183,7 +183,7 @@
 					 	<span class="text-muted font-16">( Front-End ) </span> </h3>				  
 						<div class="live-preview mt-4">
 							<a href="https://khantphone.github.io/SampleLandingPage/">
-								<button class="btn d-block mx-auto bg-fav px-4 py-2 text-white font-bu"><i class="fas fa-eye mr-2"></i> Live Preview
+								<button class="btn d-block mx-auto px-4 py-2 text-white font-bu font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
 								</button>
 							</a>												
 						 </div>
@@ -198,7 +198,7 @@
 					 	<span class="text-muted font-16">( Front-End ) </span></h3>					  
 						<div class="live-preview mt-4">	
 							<a href="https://khantphone.github.io/Personal_Portfolio/">					
-								<button class="btn d-block mx-auto bg-fav px-4 py-2 text-white font-bu"><i class="fas fa-eye mr-2"></i> Live Preview
+								<button class="btn d-block mx-auto px-4 py-2 text-white font-bu font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
 								</button>	
 							</a>					
 						 </div>
@@ -212,7 +212,7 @@
 					 	<span class="text-muted font-16">( Front-End ) </span></h3>				  
 						<div class="live-preview mt-4">	
 							<a href="https://khantphone.github.io/CheckOutForm/">					
-								<button class="btn d-block mx-auto bg-fav px-4 py-2 text-white font-bu"><i class="fas fa-eye mr-2"></i> Live Preview
+								<button class="btn d-block mx-auto px-4 py-2 text-white font-bu font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
 								</button>	
 							</a>				
 						 </div>
@@ -228,7 +228,7 @@
 					 	<span class="text-muted font-16">( Front-End ) </span> </h3>				  
 						<div class="live-preview mt-4">
 							<a href="https://khantphone.github.io/Ecommerce/.">
-							 	<button class="btn d-block mx-auto bg-fav px-4 py-2 text-white"><i class="fas fa-eye mr-2"></i> Live Preview
+							 	<button class="btn d-block mx-auto px-4 py-2 text-white font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
 								</button>
 							</a>												
 						 </div>
@@ -469,7 +469,24 @@
   			</div>
 		</div>
 	</section>
-	<!-- Swiper section end -->  	
+	<!-- Swiper section end --> 
+	<!-- customize section start -->
+	<section id="customize" class="py-4 mt-4 px-4 bg-light"  data-aos ="fade-out">
+		<div class="container" >
+			<h2 class="font-sar text-center mt-3 py-2">Customize<span class="text-fav">Your</span>Own!</h2>
+			<div id="custom-border-1">
+				<div id="cutom-border-2"></div>
+			</div>
+			<div class="d-flex justify-content-center py-4 mt-1">
+				<button class="btn-1 mr-3" id="change-1" data-aos= "fade-up"></button>	
+				<button class="btn-2 mr-3" id="change-2" data-aos= "fade-up"></button>	
+				<button class="btn-3 mr-3" id="change-3" data-aos= "fade-up"></button>	
+				<button class="btn-4 mr-3" id="change-4" data-aos= "fade-up"></button>
+			</div>
+			<p class="font-bar font-16 text-center " data-aos="fade-up">This will change the main colors of the website !</p>
+		</div>
+	</section>
+	<!-- customize section end --> 	
 	<!-- contanct section start -->
 	<section id="contanct" class="py-4 mt-4 px-4">
 		<div class="container" data-aos = "fade-out">
@@ -484,7 +501,7 @@
 		</div>
 	</section>
 	<!-- contanct section end -->
-	<!-- footer section start -->
+	<!-- footer section start -->	
 	<section id="footer" class="py-2 mt-4 px-4 bg-light">
 		<div class="row">
 			<div class="col-md-12 mt-4">
@@ -507,8 +524,6 @@
 	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="js/script.js"></script>	
-	<script>
-		
-	</script>
+	
 	</body>
 	</html>
