--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 			<div id="custom-border-1">
 				<div id="cutom-border-2"></div>
 			</div>
-			<div class="d-flex justify-content-center py-4 mt-1 ml-2">					
+			<div class="d-flex justify-content-center mt-1 ml-2">					
 				<button class="btn-2 mr-3" id="change-2" data-aos= "fade-up"></button>	
 				<button class="btn-3 mr-3" id="change-3" data-aos= "fade-up"></button>
 				<button class="btn-1 mr-3" id="change-1" data-aos= "fade-up"></button>	
