--- a/index.html
+++ b/index.html
@@ -478,12 +478,12 @@
 				<div id="cutom-border-2"></div>
 			</div>
 			<div class="d-flex justify-content-center mt-4 ml-2">					
-				<button class="btn-2 mr-3" id="change-2" data-aos= "fade-up"></button>	
-				<button class="btn-3 mr-3" id="change-3" data-aos= "fade-up"></button>
-				<button class="btn-1 mr-3" id="change-1" data-aos= "fade-up"></button>	
-				<button class="btn-4 mr-3" id="change-4" data-aos= "fade-up"></button>
+				<button class="btn-2 mr-3 mt-3" id="change-2" data-aos= "fade-up"></button>	
+				<button class="btn-3 mr-3 mt-3" id="change-3" data-aos= "fade-up"></button>
+				<button class="btn-1 mr-3 mt-3" id="change-1" data-aos= "fade-up"></button>	
+				<button class="btn-4 mr-3 mt-3" id="change-4" data-aos= "fade-up"></button>
 			</div>
-			<p class="font-bar font-16 text-center mt-4" data-aos="fade-up">This will change the main colors of the website !</p>
+			<p class="font-bar font-16 text-center mt-4 pb-4" data-aos="fade-up">This will change the main colors of the website !</p>
 		</div>
 	</section>
 	<!-- customize section end --> 	
