--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				Khant<span class="text-fav">Phone</span>
 			</a>
 			<button class="navbar-toggler text-dark" data-toggle="collapse" data-target="#navbar">
-				<i class="fas fa-bars ml-auto"></i>
-				<i class="fas fa-times ml-auto"></i>
+				<i class="fas fa-bars"></i>
+				
 			</button>
 			<div class="collapse navbar-collapse font-18" id="navbar">
 				<ul class="navbar-nav ml-auto">
@@ -162,14 +162,14 @@
 				<div id="cutom-border-2"></div>
 			</div>
 			<div class="row">
-				<div class="col-md-6" data-aos ="fade-out">
+				<div class="col-md-6" data-aos ="fade-out">					
 					<a href="https://khantphone.github.io/AdminDashboard/">
 						<img src="images/admindashboard.png" alt="AdminDashboard" class="img-fluid">
-					</a>					 
+					</a>											 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 text-dark">AdminDashboard 
-					 	<span class="text-muted font-16">( Front-End ) </span></h3>					  
+					 	<span class="text-muted font-16">( Front-End ) </span></h3>				  
 						<div class="live-preview mt-4">	
-							<a href="https://khantphone.github.io/AdminDashboard/">						
+							<a href="https://khantphone.github.io/AdminDashboard/">					
 								<button class="btn d-block mx-auto px-4 py-2 text-white font-bu font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
 								</button>	
 							</a>				
@@ -479,9 +479,9 @@
 			</div>
 			<div class="d-flex justify-content-center mt-4 ml-2">					
 				<button class="btn-2 mr-3 mt-3" id="change-2" data-aos= "fade-up"></button>	
-				<button class="btn-3 mr-3 mt-3" id="change-3" data-aos= "fade-up"></button>
-				<button class="btn-1 mr-3 mt-3" id="change-1" data-aos= "fade-up"></button>	
+				<button class="btn-3 mr-3 mt-3" id="change-3" data-aos= "fade-up"></button>			
 				<button class="btn-4 mr-3 mt-3" id="change-4" data-aos= "fade-up"></button>
+				<button class="btn-1 mr-3 mt-3" id="change-1" data-aos= "fade-up"></button>	
 			</div>
 			<p class="font-bar font-16 text-center mt-4 pb-4" data-aos="fade-up">This will change the main colors of the website !</p>
 		</div>
