--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 </head>
 <body>
 	
-	
 	<!-- navigation start -->
 	<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
 		<div class="container-fluid ">
@@ -25,8 +24,8 @@
 				Khant<span class="text-fav">Phone</span>
 			</a>
 			<button class="navbar-toggler text-dark" data-toggle="collapse" data-target="#navbar">
-				<i class="fas fa-bars"></i>
-				
+				<i class="fas fa-bars ml-auto"></i>
+							
 			</button>
 			<div class="collapse navbar-collapse font-18" id="navbar">
 				<ul class="navbar-nav ml-auto">
