--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-6 mt-5" data-aos= "fade-up">
-					<img src="images/profile2.jpeg" alt="My Profile" class="img-fluid">
+					<img src="images/profile3.jpg" alt="My Profile" class="img-fluid">
 				</div>
 				<div class="col-md-6 d-flex" data-aos = "fade-up">
 					<div class="about-me">
@@ -476,7 +476,7 @@
 			<div id="custom-border-1">
 				<div id="cutom-border-2"></div>
 			</div>
-			<div class="d-flex justify-content-center mt-4 ml-2">					
+			<div class="d-flex justify-content-center mt-3 ml-2">					
 				<button class="btn-2 mr-3 mt-3" id="change-2" data-aos= "fade-up"></button>	
 				<button class="btn-3 mr-3 mt-3" id="change-3" data-aos= "fade-up"></button>			
 				<button class="btn-4 mr-3 mt-3" id="change-4" data-aos= "fade-up"></button>
