--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 			<div id="custom-border-1">
 				<div id="cutom-border-2"></div>
 			</div>
-			<div class="d-flex justify-content-center mt-3 ml-2">					
+			<div class="buttons d-flex justify-content-center mt-3 ml-3">					
 				<button class="btn-2 mr-3 mt-3" id="change-2" data-aos= "fade-up"></button>	
 				<button class="btn-3 mr-3 mt-3" id="change-3" data-aos= "fade-up"></button>			
 				<button class="btn-4 mr-3 mt-3" id="change-4" data-aos= "fade-up"></button>
