some update designs

--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
 						<span class="typed1 text-fav font-40 lower-text" data-aos = "fade-in"></span>
 					</p>
 					<p class="font-bar font-24 mt-3 extra-text text-muted" data-aos = "fade-out">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi laboriosam eius odio consequuntur. 
+						A 19 years old freelance developer who is willing to learn new things and 
+						enjoyed about Coding .
 					</p>
-					<button class="btn px-4 py-2 font-bu text-white bg-fav mt-4 mb-0" data-aos="fade-in">VIEW MY WORKS</button>
+					<a href="#completed-prj">
+						<button class="btn px-4 py-2 font-bu text-white bg-fav mt-4 mb-0" data-aos="fade-in">VIEW MY WORKS
+						</button>
+					</a>					
 				</div>
 				<div class="col-md-6 mt-4 ">					
 					<img src="images/profile7.JPEG" alt="" class="img-fluid">					 
