some update designs

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						enjoyed about Coding .
 					</p>
 					<a href="#completed-prj">
-						<button class="btn px-4 py-2 font-bu text-white bg-fav mt-3 mb-3" data-aos="fade-in">VIEW MY WORKS
+						<button class="btn px-4 py-2 font-bu text-white bg-fav mt-3 mb-2" data-aos="fade-in">View My Works
 						</button>
 					</a>					
 				</div>
