--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 				<div id="cutom-border-2" data-aos = "fade-in"></div>
 			</div>
 			<div class="row">
-				<div class="col-md-6" data-aos ="fade-out">					
+				<div class="col-md-6" data-aos ="fade-out">
 					<a href="https://khantphone.github.io/AdminDashboard/">
 						<img src="images/admindashboard.png" alt="AdminDashboard" class="img-fluid">
 					</a>											 
@@ -235,10 +235,9 @@
 								</button>	
 							</a>				
 						 </div>
-				</div>		
-							
+				</div>							
 			</div>
-			<div class="row">				
+			<div class="row">
 				<div class="col-md-6 d-block mx-auto" data-aos ="fade-top">
 					 <a href="https://khantphone.github.io/Ecommerce/.">
 					 	<img src="images/Ecommerce.png" alt="AdminDashboard" class="img-fluid">
@@ -247,6 +246,20 @@
 					 	<span class="text-muted font-16">( Front-End ) </span> </h3>				  
 						<div class="live-preview mt-4">
 							<a href="https://khantphone.github.io/Ecommerce/.">
+							 	<button class="btn d-block mx-auto px-4 py-2 text-white font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
+								</button>
+							</a>												
+						 </div>
+				</div>	
+				<div class="col-md-6 d-block mx-auto" data-aos ="fade-top">
+					 <a href="https://khantphone.github.io/shopping-site/">
+					 	<img src="images/sneaker-shopping-site.png" alt="AdminDashboard" class="img-fluid">
+					 </a>					 
+					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">
+					 	Sneaker-ShoppingSite
+					 	<span class="text-muted font-16">( Front-End ) </span> </h3>				  
+						<div class="live-preview mt-4">
+							<a href="https://khantphone.github.io/shopping-site/">
 							 	<button class="btn d-block mx-auto px-4 py-2 text-white font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
 								</button>
 							</a>												
