--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
 	</nav>	
 	<!-- navigation end -->		
 	<!-- indrouction section start -->
-	<section id="info" class="px-4">
+	<section id="info" class="">
 		<div class="container">
 			<div class="author-info">
 			<div class="row">
-				<div class="col-md-6 author-info-text ">
+				<div class="col-md-6 author-info-text px-4">
 					<p class="font-sar font-30 font-weight-bold mt-4 mb-0 upper-text" style="letter-spacing: 2px;" data-aos = "fade-in">  Hi , I am 
 					</p>
 					<p class="font-sar font-30 font-weight-bold mb-0">	
 						<span class="typed1 text-fav font-40 lower-text" data-aos = "fade-in"></span>
 					</p>
 					<p class="font-bar font-24 mt-3 extra-text text-muted" data-aos = "fade-out">
-						A 19 years old freelance developer who is willing to learn new things and 
+						A 19 years old freelance developer  who is  willing to learn new things and 
 						enjoyed about Coding .
 					</p>
 					<a href="#completed-prj">
-						<button class="btn px-4 py-2 font-bu text-white bg-fav mt-3 mb-2" data-aos="fade-in">View My Works
+						<button class="btn px-4 py-2 font-bu text-white bg-fav mt-3 " data-aos="fade-in">View My Works
 						</button>
 					</a>					
 				</div>
@@ -116,10 +116,10 @@
 	</section>
 	<!-- indrouction section end -->
 	<!-- counter section start -->
-	<section id="counter" class="py-5 px-4 bg-light mt-4">
+	<section id="counter" class="py-5 px-4 bg- mt-4 bg-fav">
 		<div class="container">
 			<div class="row">				
-				<div class="col-md-3  d-flex justify-content-center counter-border-right" data-aos= "fade-top">
+				<div class="col-md-6 col-lg-3 border-counter  d-flex justify-content-center counter-border-right" data-aos= "fade-top">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/customer-review.png" alt="" width="70">
@@ -127,11 +127,11 @@
 				  		<div class="col mt-2">
 				  			<span class="counter font-sar font-24 font-weight-bold ">100</span>
 				  			<span class=" font-sar font-24 font-weight-bold ">+</span>
-				  			<p class="font-bar font-20 font-weight-bold text-fav">Reviews</p>
+				  			<p class="font-bar font-20 font-weight-bold text-white">Reviews</p>
 				  		</div>
 				  	</div>
 				</div>
-				<div class="col-md-3 border-counter d-flex justify-content-center counter-border-right" data-aos= "fade-top">
+				<div class="col-md-6 col-lg-3 border-counter d-flex justify-content-center counter-border-right" data-aos= "fade-top">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/project-management.png" alt="" width="70">
@@ -139,11 +139,11 @@
 				  		<div class="col mt-2">
 				  			 <span class="counter font-sar font-24 font-weight-bold ">50</span>
 				  			 <span class=" font-sar font-24 font-weight-bold ">+</span>
-				  			<p class="font-bar font-20 font-weight-bold text-fav">Projects</p>
+				  			<p class="font-bar font-20 font-weight-bold text-white">Projects</p>
 				  		</div>
 				  	</div>
 				</div>
-				<div class="col-md-3 border-counter d-flex justify-content-center counter-border-right" data-aos= "fade-top">
+				<div class="col-md-6 col-lg-3 border-counter d-flex justify-content-center counter-border-right" data-aos= "fade-top">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/settings.png" alt="" width="70">
@@ -151,11 +151,11 @@
 				  		<div class="col mt-2">
 				  			<span class="counter font-sar font-24 font-weight-bold ">15</span>
 				  			<span class=" font-sar font-24 font-weight-bold ">+</span>
-				  			<p class="font-bar font-20 font-weight-bold text-fav">Webiste</p>
+				  			<p class="font-bar font-20 font-weight-bold text-white">Webiste</p>
 				  		</div>
 				  	</div>
 				</div>
-				<div class="col-md-3  d-flex justify-content-center" data-aos= "fade-top">
+				<div class="col-md-6 col-lg-3 border-counter  d-flex justify-content-center" data-aos= "fade-top">
 				  	<div class="row">
 				  		<div class="col">
 				  			<img src="images/handshake.png" alt="" width="70">
@@ -163,7 +163,7 @@
 				  		<div class="col mt-2">
 				  			<span class="counter font-sar font-24 font-weight-bold ">10</span>
 				  			<span class=" font-sar font-24 font-weight-bold ">+</span>
-				  			<p class="font-bar font-20 font-weight-bold text-fav">Clients</p>
+				  			<p class="font-bar font-20 font-weight-bold text-white">Clients</p>
 				  		</div>
 				  	</div>
 				</div>
