some designs updates

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	<!-- counter section start -->
 	<section id="counter" class="py-5 px-4 bg- mt-4 bg-fav">
 		<div class="container">
-			<div class="row">				
+			<div class="row ">				
 				<div class="col-md-6 col-lg-3 border-counter  d-flex justify-content-center counter-border-right" data-aos= "fade-top">
 				  	<div class="row">
 				  		<div class="col">
@@ -186,7 +186,7 @@
 						<img src="images/admindashboard.png" alt="AdminDashboard" class="img-fluid">
 					</a>											 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 text-dark">AdminDashboard 
-					 	<span class="text-muted font-16">( Front-End ) </span></h3>				  
+					 </h3>				  
 						<div class="live-preview mt-4">	
 							<a href="https://khantphone.github.io/AdminDashboard/">					
 								<button class="btn d-block mx-auto px-4 py-2 text-white font-bu font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
@@ -196,10 +196,10 @@
 				</div>			
 				<div class="col-md-6" data-aos ="fade-in">
 					 <a href="https://khantphone.github.io/SampleLandingPage/">
-					 	<img src="images/SampleLandingPage.png" alt="AdminDashboard" class="img-fluid">
+					 	<img src="images/SampleLandingPage.png" alt="SampleLandingPage" class="img-fluid">
 					 </a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18">SampleLandingPage 
-					 	<span class="text-muted font-16">( Front-End ) </span> </h3>				  
+					  </h3>				  
 						<div class="live-preview mt-4">
 							<a href="https://khantphone.github.io/SampleLandingPage/">
 								<button class="btn d-block mx-auto px-4 py-2 text-white font-bu font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
@@ -214,7 +214,7 @@
 						<img src="images/Portfolio.png" alt="portofolio" class="img-fluid">
 					</a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18">PersonalPortofolio 
-					 	<span class="text-muted font-16">( Front-End ) </span></h3>					  
+					 </h3>					  
 						<div class="live-preview mt-4">	
 							<a href="https://khantphone.github.io/Personal_Portfolio/">					
 								<button class="btn d-block mx-auto px-4 py-2 text-white font-bu font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
@@ -228,7 +228,7 @@
 					</a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18">
 					 	CheckOutForm 
-					 	<span class="text-muted font-16">( Front-End ) </span></h3>				  
+					 </h3>				  
 						<div class="live-preview mt-4">	
 							<a href="https://khantphone.github.io/CheckOutForm/">					
 								<button class="btn d-block mx-auto px-4 py-2 text-white font-bu font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
@@ -243,7 +243,7 @@
 					 	<img src="images/Ecommerce.png" alt="AdminDashboard" class="img-fluid">
 					 </a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">Ecommerce
-					 	<span class="text-muted font-16">( Front-End ) </span> </h3>				  
+					 </h3>				  
 						<div class="live-preview mt-4">
 							<a href="https://khantphone.github.io/Ecommerce/.">
 							 	<button class="btn d-block mx-auto px-4 py-2 text-white font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
@@ -257,7 +257,7 @@
 					 </a>					 
 					 <h3 class="font-bar mt-4 font-weight-bold text-center font-18 font-bu">
 					 	Sneaker-ShoppingSite
-					 	<span class="text-muted font-16">( Front-End ) </span> </h3>				  
+					 </h3>				  
 						<div class="live-preview mt-4">
 							<a href="https://khantphone.github.io/shopping-site/">
 							 	<button class="btn d-block mx-auto px-4 py-2 text-white font-bu bg-fav"><i class="fas fa-eye mr-2"></i> Live Preview
@@ -267,7 +267,7 @@
 				</div>	
 			</div>
 			<p class="font-sar text-center mt-3 font-18 info-backend muted-text">
-				If u want to watch Back-End projects , <a href="backend.html"> Click Here !</a>
+				If u want to view more projects , <a href="backend.html"> Click Here !</a>
 			</p>
 		</div>
 	</section>
