some design updates

--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
 							</a>												
 						 </div>
 				</div>	
-			</div>
+			</div><!-- 
 			<p class="font-sar text-center mt-3 font-18 info-backend muted-text">
 				If u want to view more projects , <a href="backend.html"> Click Here !</a>
-			</p>
+			</p> -->
 		</div>
 	</section>
 	<!-- completedProject section end -->
