some design updates

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
 	</section>
 	<!-- counter section end -->
 	<!-- completedProject section start -->
-	<section id="completed-prj" class="py-4 px-4 mt-4 bg-light">
+	<section id="completed-prj" class="py-4 px-4  bg-light">
 	 	<div class="container">
-			<h2 class="font-sar text-center py-2 " data-aos = "fade-in">Completed <span class="text-fav">
+			<h2 class="font-sar text-center py-2 mt-4" data-aos = "fade-in">Completed <span class="text-fav">
 				Projects
 			</span></h2>			
 			<div id="custom-border-1" data-aos = "fade-in">
@@ -273,9 +273,9 @@
 	</section>
 	<!-- completedProject section end -->
 	<!-- myskills section start -->
-	<section id="myskills" class="py-4 px-4 mt-4 bg-light">
+	<section id="myskills" class="py-4 px-4  bg-light">
 		<div class="container" >
-			<h2 class="font-sar text-center py-k" data-aos = "fade-out">My <span class="text-fav">
+			<h2 class="font-sar text-center py-k mt-4" data-aos = "fade-out">My <span class="text-fav">
 				Skills
 			</span></h2>			
 			<div id="custom-border-1" data-aos = "fade-out">
