--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                  <span class="education_rounder"></span>                            
                              </div>
                              <div class="ml-3">
-                                 <h3 class="education_title font-sar ">Java & Database Structures</h3>
+                                 <h3 class="education_title font-sar ">Java </h3>
                                  <span class="education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>                               
                              </div>                             
                          </div>
