--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="education_content ">
                          <!-- education 1 -->
                          <div class="education_data">
-                             <div class="mr-1">
+                             <div>
                                  <h3 class="education_title font-24 font-sar">Programming Basic</h3>
                                  <span class="education_subtitle text-muted font-bar font-16">MCM myanmar</span>                                
                              </div>
@@ -158,7 +158,7 @@
                          </div>
                          <!-- education 3 -->
                          <div class="education_data">
-                             <div class="mr-1">
+                             <div>
                                  <h3 class="education_title font-sar">Web Development</h3>
                                  <span class="education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>
                                  
