--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 	</section>
 	<!-- indrouction section end -->
 	<!-- educaton section start -->
-	<section class="education section mt-4 py-4 px-4 ">
+	<section id="education" class="education mt-4 py-4 px-4 ">
             <div class="container">
 	            <h2 class="font-bar font-weight-bold text-uppercase text-center py-2 text-dark"
 				 data-aos = "fade-in">Education</h2>	
@@ -152,7 +152,7 @@
                                  <span class="education_rounder"></span>
                                  <span class="education_line"></span>
                              </div>
-                             <div class="ml-3">
+                             <div>
                                  <h3 class="education_title font-sar">Computer Programming</h3>      <span class="education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>              
                             </div>                             
                          </div>
@@ -174,7 +174,7 @@
                             <div>
                                  <span class="education_rounder"></span>                            
                              </div>
-                             <div class="ml-3">
+                             <div>
                                  <h3 class="education_title font-sar ">Java & Database Structures</h3>
                                  <span class="education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>                               
                              </div>                             
