--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Baumans&family=Big+Shoulders+Stencil+Text&family=Faster+One&family=Saira+Condensed&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
 	<!-- AOS cdn -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">   -->  
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">    
 	<link rel="shortcut icon" href="images/profile2.jpeg">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -136,8 +136,8 @@
                          <!-- education 1 -->
                          <div class="education_data">
                              <div>
-                                 <h3 class="education_title font-24 font-sar">Programming Basic</h3>
-                                 <span class="education_subtitle text-muted font-bar font-16">MCM myanmar</span>                                
+                                 <h3 class="education_title font-24 font-sar" data-aos = "fade-top">Programming Basic</h3>
+                                 <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-top">MCM myanmar</span>                                
                              </div>
                              <div>
                                  <span class="education_rounder"></span>
@@ -152,14 +152,16 @@
                                  <span class="education_line"></span>
                              </div>
                              <div class="ml-3">
-                                 <h3 class="education_title font-sar">Computer Programming</h3>      <span class="education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>              
+                                 <h3 class="education_title font-sar" data-aos = "fade-in">Computer Programming</h3>    
+                                 <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-in">Metro IT & Japanese Language Center
+                                 </span>              
                             </div>                             
                          </div>
                          <!-- education 3 -->
                          <div class="education_data">
                              <div>
-                                 <h3 class="education_title font-sar">Web Development</h3>
-                                 <span class="education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>
+                                 <h3 class="education_title font-sar" data-aos = "fade-in">Web Development</h3>
+                                 <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-in">Metro IT & Japanese Language Center</span>
                                  
                              </div>
                              <div>
@@ -174,8 +176,8 @@
                                  <span class="education_rounder"></span>                            
                              </div>
                              <div class="ml-3">
-                                 <h3 class="education_title font-sar ">Java & Database Structures</h3>
-                                 <span class="education_subtitle text-muted font-bar font-16">Metro IT & Japanese Language Center</span>                               
+                                 <h3 class="education_title font-sar " data-aos = "fade-in">Java & Database Structures</h3>
+                                 <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-in">Metro IT & Japanese Language Center</span>                               
                              </div>                             
                          </div>
                     </div>
