--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
 	</section>
 	<!-- indrouction section end -->
 	<!-- educaton section start -->
-	<section id="education" class="education mt-4 py-4 px-4 ">
+	<section id="education" class=" mt-4 py-4 px-4 ">
             <div class="container">
 	            <h2 class="font-bar font-weight-bold text-uppercase text-center py-2 text-dark"
 				 data-aos = "fade-in">Education</h2>	
 				<div id="custom-border-1" data-aos = "fade-out">
 					<div id="cutom-border-2" data-aos = "fade-out"></div>
 				</div>
-                <div class="education_sections  d-flex justify-content-center mt-5 mb-4">
+                <div class="education_sections mt-5 mb-4 ">
                     <!-- education content 1 -->
-                    <div class="education_content ">
+                    <div class="education_content">
                          <!-- education 1 -->
                          <div class="education_data">
-                             <div>
+                             <div >
                                  <h3 class="education_title font-24 font-sar" data-aos = "fade-top">Programming Basic</h3>
                                  <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-top">MCM myanmar</span>                                
                              </div>
@@ -151,7 +151,7 @@
                                  <span class="education_rounder"></span>
                                  <span class="education_line"></span>
                              </div>
-                             <div class="ml-3">
+                             <div>
                                  <h3 class="education_title font-sar" data-aos = "fade-in">Computer Programming</h3>    
                                  <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-in">Metro IT & Japanese Language Center
                                  </span>              
@@ -175,7 +175,7 @@
                             <div>
                                  <span class="education_rounder"></span>                            
                              </div>
-                             <div class="ml-3">
+                             <div >
                                  <h3 class="education_title font-sar " data-aos = "fade-in">Java & Database Structures</h3>
                                  <span class="education_subtitle text-muted font-bar font-16" data-aos = "fade-in">Metro IT & Japanese Language Center</span>                               
                              </div>                             
